# QuantumToy

./: LICENSE  README.md  pyproject.toml  requirements.txt
paper/: MeasurementThickness.tex  ThickFront.aux  ThickFront.tex
src/: quantumtoy.py
src/experimental/: analyze_worldline_seed_sweep.py  animate_worldline.py  entanglement_spin_poc.py  quantumtoy_dirac.py  riemann_serious.py  run_worldline_seed_sweep.py  visualize_worldline.py  worldline.py  worldline_advanced.py  worldline_hybrid_single.py  worldline_locked.py  worldline_tube.py
src/quantumtoy/: config.py  double_slit_multifront.py  main.py  visualize.py
src/quantumtoy/analysis/: bohmian.py  current.py  debug_continuity.py  emix.py  entanglement_posthoc_trf.py  posthoc_trf.py  ridge.py  trf_branch.py  worldline.py
src/quantumtoy/analysis/debug/: analyze_posthoc_trf_sweep.py  plot_posthoc_dominance.py  run_posthoc_trf_fragility.py  run_posthoc_trf_sweep.py  (+1 more)
src/quantumtoy/core/: grid.py  packets.py  potentials.py  simulation_types.py  utils.py
src/quantumtoy/detection/: BornDetector.py  EmergentDetector.py  __init__.py  base.py  factory.py
src/quantumtoy/file/: run_io.py
src/quantumtoy/theories/: base.py  dirac.py  dirac_thick_front.py  metric_aware_schrodinger.py  registry.py  rotating_tensor_metric_aware_schrodinger.py  schrodinger.py  schrodinger_measurement.py  tensor_metric_aware_schrodinger.py  thick_front.py  thick_front_entanglement.py  thick_front_measurement_guided.py  thick_front_optimized.py  thick_front_world_line.py
src/quantumtoy/viz/: animator.py  visual_debug.py
(+23 files in other folders)
