[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumtoy"
version = "0.3.0"
description = "QuantumToy – experimental thick reality front simulation framework"
authors = [
    {name = "Saku Hämäläinen"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7"
]

[project.urls]
Repository = "https://github.com/SakuHam/QuantumToy"